# rose

./: .env.example  .gitignore  CLAUDE.md  CLAUDE_DOCS.md  Dockerfile  README.md  cli.py  compose.yml  pyproject.toml  topgun
.claude/global/commands/: commit.md  feature.md  issue.md
.claude/template/: CLAUDE.md
.github/workflows/: deploy.yml
commands/: install.py
docs/: ARCHITECTURE.md  auth0-setup.md  cloudflare-setup.md  google-drive-oauth.md  graph-viewer.html  graph-viewer.js  hetzner-setup.md  reference.md
global/: CLAUDE.md  settings.json
global/agents/: analyst-agent.md  analyst.md  engineer.md  gh-agent.md  git-agent.md  git.md  github.md  project-conf-agent.md  rose-backlog.md  rose-engineer.md  rose-git.md  rose-github-researcher.md  rose-research.md  topgun-github-researcher.md
global/commands/: commit.md  feature.md  gh.md  git.md  github.md  issue.md  project.md  rose.md  topgun-backlog.md  topgun-mission-plan.md  topgun-notes.md  topgun-plan.md  topgun-task.md  topgun-thought.md  topgun.md
global/hooks/: log-session-end.sh  log-session-start.sh  log-tool-event.sh  post-write-validate.sh
observability/grafana/: grafana.ini
observability/loki/: loki-config.yml
scripts/: observe.py  provision.sh
src/rose/: cli.py
src/rose/api/: main.py  requirements.txt
src/rose/cli/: __init__.py  config.py  install.py  observe.py  session.py  uninstall.py  upgrade.py
src/rose/commands/: init.py  install.py  (+1 more)
src/topgun/: errors.py
tests/integration/: test_mission_integration.py  test_task_integration.py  test_timer_integration.py  test_upgrade_layout.py
(+117 files in other folders)
