[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "rose"
version = "0.1.0"
description = "Installs and manages Claude Code configuration"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "rich>=13",
]

[project.scripts]
rose = "rose.cli:app"

[tool.setuptools.packages.find]
where = ["src"]
