[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "topgun"
version = "0.1.0"
description = "Installs and manages Claude Code configuration"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "rich>=13",
    "watchdog>=4",
]

[project.scripts]
topgun = "topgun.cli:app"

[project.optional-dependencies]
test = ["pytest"]

[tool.setuptools.packages.find]
where = ["src"]
